--- a/view/view_FakturPajak.xml
+++ b/view/view_FakturPajak.xml
@@ -26,10 +26,13 @@
 			<field name="arch" type="xml">
 				<form string="Faktur Pajak" version="7.0">
 					<header>
-						<button name="button_approve" type="workflow" string="Approve" colspan="2" states="confirm"/>
-						<button name="button_process" type="workflow" string="Process" colspan="2" states="ready"/>
-						<button name="button_action_set_to_draft" type="object" string="Set To Draft" colspan="2" states="cancel"/>
-						<field name="state" widget="statusbar" statusbar_visible="draft,confirm,approve,done"/>
+            			<button name="button_confirm" type="workflow" colspan="2" string="Confirm" icon="gtk-go-forward" states="draft" groups="ar_pajak.group_pajak_confirmFakturPajak"/>
+            			<button name="button_approve" type="workflow" colspan="2" string="Approve" icon="gtk-apply" states="confirm" groups="ar_pajak.group_pajak_approveFakturPajak"/>
+            			<button name="button_done" type="workflow" colspan="2" string="Done" icon="gtk-yes" states="approve" groups="ar_pajak.group_pajak_processFakturPajak"/>
+            			<button name="button_cancel" type="workflow" colspan="2" string="Cancel" icon="gtk-cancel" states="draft,confirm,approve" groups="ar_pajak.group_pajak_cancelFakturPajak"/>
+            			<button name="button_action_cancel" type="object" colspan="2" string="Cancel" icon="gtk-cancel" states="done" groups="ar_pajak.group_pajak_cancelFakturPajak"/>
+            			<button name="button_action_set_to_draft" type="object" colspan="2" string="Set To Draft" icon="gtk-convert" states="cancel" groups="ar_pajak.group_pajak_restartFakturPajak"/>
+						<field name="state" widget="statusbar" statusbar_visible="draft,confirm,approve"/>
 					</header>
 					<sheet string="Faktur Pajak">
 							<label for="name"/>						
