--- a/view/view_Formulir1111B1.xml
+++ b/view/view_Formulir1111B1.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
 	<data>
-		<record id="tree_pajak_formulir1111A2" model="ir.ui.view">
-			<field name="name">Formulir 1111 A2</field>
-			<field name="model">pajak.formulir_1111_a2</field>
+		<record id="tree_pajak_formulir1111B1" model="ir.ui.view">
+			<field name="name">Formulir 1111 B1</field>
+			<field name="model">pajak.formulir_1111_b1</field>
 			<field name="arch" type="xml">
-				<tree string="Formulir 1111 A2">
+				<tree string="Formulir 1111 B1">
 					<field name="name"/>
 					<field name="company_id"/>
 					<field name="nama_pkp"/>
@@ -17,26 +17,26 @@
 			</field>
 		</record>
 		
-		<record id="form_pajak_formulir1111A2" model="ir.ui.view">
-			<field name="name">Formulir 1111 A2</field>
-			<field name="model">pajak.formulir_1111_a2</field>
+		<record id="form_pajak_formulir1111B1" model="ir.ui.view">
+			<field name="name">Formulir 1111 B1</field>
+			<field name="model">pajak.formulir_1111_b1</field>
 			<field name="arch" type="xml">
-				<form string="Formulir 1111 A2" version="7.0">
+				<form string="Formulir 1111 B1" version="7.0">
 					<header>
-            			<button name="button_confirm" type="workflow" colspan="2" string="Confirm" icon="gtk-go-forward" states="draft" groups="ar_pajak.group_pajak_confirmFormulir1111A2"/>
-            			<button name="button_approve" type="workflow" colspan="2" string="Approve" icon="gtk-apply" states="confirm" groups="ar_pajak.group_pajak_approveFormulir1111A2"/>
-            			<button name="button_done" type="workflow" colspan="2" string="Done" icon="gtk-yes" states="approve" groups="ar_pajak.group_pajak_processFormulir1111A2"/>
-            			<button name="button_cancel" type="workflow" colspan="2" string="Cancel" icon="gtk-cancel" states="draft,confirm,approve" groups="ar_pajak.group_pajak_cancelFormulir1111A2"/>
-            			<button name="button_action_cancel" type="object" colspan="2" string="Cancel" icon="gtk-cancel" states="done" groups="ar_pajak.group_pajak_cancelFormulir1111A2"/>
-            			<button name="button_action_set_to_draft" type="object" colspan="2" string="Set To Draft" icon="gtk-convert" states="cancel" groups="ar_pajak.group_pajak_restartFormulir1111A2"/>
+            			<button name="button_confirm" type="workflow" colspan="2" string="Confirm" icon="gtk-go-forward" states="draft" groups="ar_pajak.group_pajak_confirmFormulir1111B1"/>
+            			<button name="button_approve" type="workflow" colspan="2" string="Approve" icon="gtk-apply" states="confirm" groups="ar_pajak.group_pajak_approveFormulir1111B1"/>
+            			<button name="button_done" type="workflow" colspan="2" string="Done" icon="gtk-yes" states="approve" groups="ar_pajak.group_pajak_processFormulir1111B1"/>
+            			<button name="button_cancel" type="workflow" colspan="2" string="Cancel" icon="gtk-cancel" states="draft,confirm,approve" groups="ar_pajak.group_pajak_cancelFormulir1111B1"/>
+            			<button name="button_action_cancel" type="object" colspan="2" string="Cancel" icon="gtk-cancel" states="done" groups="ar_pajak.group_pajak_cancelFormulir1111B1"/>
+            			<button name="button_action_set_to_draft" type="object" colspan="2" string="Set To Draft" icon="gtk-convert" states="cancel" groups="ar_pajak.group_pajak_restartFormulir1111B1"/>
 						<field name="state" widget="statusbar" statusbar_visible="draft,confirm,approve"/>
 					</header>
-					<sheet string="Formulir 1111 A2">
+					<sheet string="Formulir 1111 B1">
 						<h1>
-							<label string="FORMULIR 1111 A2"/>
+							<label string="FORMULIR 1111 B1"/>
 						</h1>
 						<h3>
-							<label string="DAFTAR PAJAK KELUARAN ATAS PENYERAHAN DALAM NEGERI DENGAN FAKTUR PAJAK"/>
+							<label string="DAFTAR PAJAK MASUKAN YANG DAPAT DIKREDITKAN ATAS IMPOR BKP DAN PEMANFAATAN BKP TIDAK BERWUJUD DARI LUAR DAERAH PABEAN"/>
 						</h3>
 						<group name="group_1" colspan="4" col="4">
 							<group name="group_1_1" colspan="1" col="2">
@@ -59,7 +59,7 @@
 										<field name="dpp"/>
 										<field name="ppn"/>
 										<field name="ppnbm"/>										
-										<field name="dokumen_pengganti_id"/>										
+										<field name="keterangan"/>										
 									</tree>
 								</field>
 							</page>
@@ -92,11 +92,11 @@
 		</record>
 
 
-		<record id="search_pajak_formulir1111A2" model="ir.ui.view">
-			<field name="name">Formulir 1111 A2</field>
-			<field name="model">pajak.formulir_1111_a2</field>
+		<record id="search_pajak_formulir1111B1" model="ir.ui.view">
+			<field name="name">Formulir 1111 B1</field>
+			<field name="model">pajak.formulir_1111_b1</field>
 			<field name="arch" type="xml">
-				<search string="Formulir 1111 A2">
+				<search string="Formulir 1111 B1">
 					<field name="name"/>
 					<field name="company_id"/>
 					<field name="nama_pkp"/>
