--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -11,6 +11,7 @@
                         <page string="Pajak">
                             <group>
                                 <field name="sequence_faktur_pajak"/>
+                                <field name="sequence_formulir_1111_a1"/>
                             </group>
                         </page>
 	                </page>		
