--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -12,6 +12,7 @@
                             <group>
                                 <field name="sequence_faktur_pajak"/>
                                 <field name="sequence_formulir_1111_a1"/>
+                                <field name="sequence_formulir_1111_a2"/>
                             </group>
                         </page>
 	                </page>		
