--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -13,6 +13,7 @@
                                 <field name="sequence_faktur_pajak"/>
                                 <field name="sequence_formulir_1111_a1"/>
                                 <field name="sequence_formulir_1111_a2"/>
+                                <field name="sequence_formulir_1111_ab"/>
                             </group>
                         </page>
 	                </page>		
