--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -14,6 +14,7 @@
                                 <field name="sequence_formulir_1111_a1"/>
                                 <field name="sequence_formulir_1111_a2"/>
                                 <field name="sequence_formulir_1111_ab"/>
+                                <field name="sequence_formulir_1111_b1"/>
                             </group>
                         </page>
 	                </page>		
