--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -15,6 +15,7 @@
                                 <field name="sequence_formulir_1111_a2"/>
                                 <field name="sequence_formulir_1111_ab"/>
                                 <field name="sequence_formulir_1111_b1"/>
+                                <field name="sequence_formulir_1111_b2"/>
                             </group>
                         </page>
 	                </page>		
