--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -16,6 +16,7 @@
                                 <field name="sequence_formulir_1111_ab"/>
                                 <field name="sequence_formulir_1111_b1"/>
                                 <field name="sequence_formulir_1111_b2"/>
+                                <field name="sequence_formulir_1111_b3"/>
                             </group>
                         </page>
 	                </page>		
