--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -18,6 +18,7 @@
                                 <field name="sequence_formulir_1111_b2"/>
                                 <field name="sequence_formulir_1111_b3"/>
                                 <field name="sequence_nota_pembatalan"/>
+                                <field name="sequence_nota_retur"/>
                             </group>
                         </page>
 	                </page>		
