--- a/view/view_Formulir1111A1.xml
+++ b/view/view_Formulir1111A1.xml
@@ -26,8 +26,7 @@
             			<button name="button_confirm" type="workflow" colspan="2" string="Confirm" icon="gtk-go-forward" states="draft" groups="ar_pajak.group_pajak_confirmFormulir1111A1"/>
             			<button name="button_approve" type="workflow" colspan="2" string="Approve" icon="gtk-apply" states="confirm" groups="ar_pajak.group_pajak_approveFormulir1111A1"/>
             			<button name="button_done" type="workflow" colspan="2" string="Done" icon="gtk-yes" states="approve" groups="ar_pajak.group_pajak_processFormulir1111A1"/>
-            			<button name="button_cancel" type="workflow" colspan="2" string="Cancel" icon="gtk-cancel" states="draft,confirm,approve" groups="ar_pajak.group_pajak_cancelFormulir1111A1"/>
-            			<button name="button_action_cancel" type="object" colspan="2" string="Cancel" icon="gtk-cancel" states="done" groups="ar_pajak.group_pajak_cancelFormulir1111A1"/>
+            			<button name="%(ar_base.waction_base_wizardCancelTransaction)d" type="action" colspan="2" string="Cancel" icon="gtk-cancel" states="draft,confirm,approve,done" groups="ar_pajak.group_pajak_cancelFormulir1111A1"/>
             			<button name="button_action_set_to_draft" type="object" colspan="2" string="Set To Draft" icon="gtk-convert" states="cancel" groups="ar_pajak.group_pajak_restartFormulir1111A1"/>
 						<field name="state" widget="statusbar" statusbar_visible="draft,confirm,approve"/>
 					</header>
