--- a/view/view_FakturPajak.xml
+++ b/view/view_FakturPajak.xml
@@ -55,7 +55,7 @@
 								<field name="faktur_pajak_line_ids" colspan="4" nolabel="1" mode="tree">
 									<tree string="Faktur Pajak Line" editable="bottom">
 										<field name="name"/>
-										<field name="product_id"/>
+										<field name="product_id" on_change="onchange_product_id(product_id)"/>
 										<field name="subtotal"/>
 									</tree>							
 								</field>
