--- a/view/view_NotaPembatalan.xml
+++ b/view/view_NotaPembatalan.xml
@@ -55,7 +55,7 @@
 								<field name="nota_pembatalan_line_ids" colspan="4" nolabel="1" mode="tree">
 									<tree string="Nota Pembatalan Line" editable="bottom">
 										<field name="name"/>
-										<field name="product_id"/>
+										<field name="product_id" on_change="onchange_product_id(product_id)"/>
                                         <field name="unit_price"/>
                                         <field name="quantity"/>
 										<field name="subtotal"/>
