--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -8,18 +8,22 @@
             <field name="arch" type="xml">
             	<data>
 			        <page string="Configuration" position="after">
-                        <page string="Pajak">
-                            <group>
-                                <field name="sequence_faktur_pajak"/>
-                                <field name="sequence_formulir_1111_a1"/>
-                                <field name="sequence_formulir_1111_a2"/>
-                                <field name="sequence_formulir_1111_ab"/>
-                                <field name="sequence_formulir_1111_b1"/>
-                                <field name="sequence_formulir_1111_b2"/>
-                                <field name="sequence_formulir_1111_b3"/>
-                                <field name="sequence_nota_pembatalan"/>
-                                <field name="sequence_nota_retur"/>
-                                <field name="faktur_pajak_signature_id"/>
+                        <page string="Indonesia Taxform">
+                            <group name="group_1" colspan="4" col="2">
+                                <group name="group_1_1" colspan="1" col="2">
+                                    <field name="sequence_faktur_pajak"/>
+                                    <field name="sequence_formulir_1111_a1"/>
+                                    <field name="sequence_formulir_1111_a2"/>
+                                    <field name="sequence_formulir_1111_ab"/>
+                                    <field name="sequence_formulir_1111_b1"/>
+                                    <field name="sequence_formulir_1111_b2"/>
+                                    <field name="sequence_formulir_1111_b3"/>
+                                    <field name="sequence_nota_pembatalan"/>
+                                    <field name="sequence_nota_retur"/>
+                                </group>
+                                <group name="group_1_2" colspan="1" col="2">
+                                    <field name="faktur_pajak_signature_id"/>
+                                </group>
                             </group>
                         </page>
 	                </page>		
