--- a/view/view_ResCompany.xml
+++ b/view/view_ResCompany.xml
@@ -18,6 +18,7 @@
                                     <field name="sequence_formulir_1111_b1"/>
                                     <field name="sequence_formulir_1111_b2"/>
                                     <field name="sequence_formulir_1111_b3"/>
+                                    <field name="sequence_surat_setor_pajak"/>
                                 </group>
                                 <group name="group_1_2" colspan="1" col="2">
                                     <field name="faktur_pajak_signature_id"/>
